docs: Agregando documentacion de los endpoint de follows
