# src/controllers/follow.controllers.js
@@ -2,6 +2,16 @@ const { Follows, User } = require('../models');
 const follows = require('../models/follows');
 
 const obtenerFollows = async (req, res) => {
+    /* #swagger.tags = ['Follows']
+        #swagger.summary = 'Obtener todos los seguimientos registrados en el sistema'
+        #swagger.responses[200] = {
+            description: 'Lista de todos los seguimientos obtenida exitosamente.'
+        }
+        #swagger.responses[500] = {
+            description: 'Error interno del servidor.'
+        }
+    */
+
     try {
         const follows = await Follows.findAll()
 
@@ -21,6 +31,23 @@ const obtenerFollows = async (req, res) => {
 }
 
 const obtenerFollowsDeUser = async (req, res) => {
+    /* #swagger.tags = ['Follows']
+        #swagger.summary = 'Obtener lista de usuarios a los que sigue un usuario específico'
+        #swagger.parameters['user'] = {
+            in: 'path',
+            description: 'Nickname del usuario seguidor',
+            required: true,
+            type: 'string'
+        }
+        #swagger.responses[200] = {
+            description: 'Lista de seguidos obtenida exitosamente.'
+        }
+        #swagger.responses[404] = {
+            description: 'Usuario inexistente.'
+        }
+    */
+
+
     try {
         const follows = await Follows.findAll({
             where: {
@@ -43,6 +70,40 @@ const obtenerFollowsDeUser = async (req, res) => {
 }
 
 const crearFollow = async (req, res) => {
+    /* #swagger.tags = ['Follows']
+        #swagger.summary = 'Hacer que un usuario siga a otro'
+        #swagger.parameters['user'] = {
+            in: 'path',
+            description: 'Nickname del usuario que va a seguir a otro (seguidor)',
+            required: true,
+            type: 'string'
+        }
+        #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: { 
+                        type: "object",
+                        properties: {
+                            followed_user_nickname: { type: "string", example: "amigo123" }
+                        },
+                        required: ["followed_user_nickname"]
+                    }
+                }
+            }
+        }
+        #swagger.responses[201] = {
+            description: 'Seguimiento creado exitosamente.'
+        }
+        #swagger.responses[400] = {
+            description: 'El body no cumple con los parámetros solicitados.'
+        }
+        #swagger.responses[404] = {
+            description: 'Usuario a seguir inexistente.'
+        }
+    */
+
+
     try {
 
         const seguido = await Follows.create({
@@ -58,6 +119,39 @@ const crearFollow = async (req, res) => {
 }
 
 const eliminarFollow = async (req, res) => {
+    /* #swagger.tags = ['Follows']
+        #swagger.summary = 'Dejar de seguir a un usuario'
+        #swagger.parameters['user'] = {
+            in: 'path',
+            description: 'Nickname del usuario que quiere dejar de seguir a otro',
+            required: true,
+            type: 'string'
+        }
+        #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: { 
+                        type: "object",
+                        properties: {
+                            followed_user_nickname: { type: "string", example: "amigo123" }
+                        },
+                        required: ["followed_user_nickname"]
+                    }
+                }
+            }
+        }
+        #swagger.responses[201] = {
+            description: 'Seguimiento eliminado exitosamente.'
+        }
+        #swagger.responses[400] = {
+            description: 'No existe el seguimiento para eliminar.'
+        }
+        #swagger.responses[404] = {
+            description: 'Usuario a seguir inexistente.'
+        }
+    */
+
 
     try {
         await Follows.destroy({
